<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:background="@color/pastel"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--    padding = gap from boarder     -->

    <TextView
        android:id="@+id/headTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/prompt_bold"
        android:text="@string/app_name"
        android:textColor="@color/green_700"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headTitle"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_user"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Image from src -->
    <ImageView
        android:id="@+id/imageOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcomeTitle"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_menu_1"
        android:contentDescription="@string/desc1"/>

    <ImageView
        android:id="@+id/imageTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageOne"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_menu_2"
        android:contentDescription="@string/desc2"/>

    <ImageView
        android:id="@+id/imageThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageTwo"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_menu_3"
        android:contentDescription="@string/desc3"/>



</RelativeLayout>